--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
 	<meta charset="utf-8" />
 	<link rel='icon' href='./img/favicon.ico' type='image/x-icon' />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="theme-color" content="#000000" />
 	<meta name="description" content="Adina Cianciotto's Personal Portfolio" />
+	<meta name="keywords"
+		content="Adina Cianciotto, A Cianciotto, Adina Lian Cianciotto, Adina Cianciotto Northwestern, Adina Cianciotto Developer">
 	<meta name="author" content="Adina Cianciotto" />
 	<title>Welcome To My Personal Portfolio</title>
 	<!-- Bootstrap CSS -->
@@ -124,9 +126,9 @@
 							style="width: 300px; height:400px; border: 0.5rem solid rgba(255, 255, 255, 0.2);"
 							alt="Profile Picture">
 					</div>
-					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-9">
+					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 						<br>
-						<p data-aos="zoom-in-down">Hi! My name is Adina
+						<p data-aos="zoom-in-down" id="aboutText">Hi! My name is Adina
 							Cianciotto. I am a Northwestern graduate, Chicago-native, cat-mom, and Full-Stack Web
 							Developer who fell in love with the art and science of coding.
 							To me, web development is a passion and joy. It's
