--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			</div>
 		</div>
 	</section>
-	<!--================End Home Banner Area =================-->>
+	<!--================End Home Banner Area =================-->
 	<!--================Feature Area =================-->
 	<section class="feature_area p_120" id="aboutMe">
 		<div class="container">
