--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel='icon' href='./img/favicon.ico' type='image/x-icon' />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="theme-color" content="#000000" />
-	<meta name="description" content="Hi! This is my personal portfolio website. Read to hear a little more about me, my projects, my background, and my work." />
+	<meta name="description" content="Hi! I'm Adina Cianciotto. This is my personal portfolio website. Read to hear a little more about me, my projects, my background, and my work." />
 	<meta name="keywords"
 		content="Adina Cianciotto, A Cianciotto, Adina Lian Cianciotto, Adina Cianciotto Northwestern, Adina Cianciotto Developer">
 	<meta name="author" content="Adina Cianciotto" />
