--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<link rel='icon' href='./img/favicon.ico' type='image/x-icon' />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="theme-color" content="#000000" />
-	<meta name="description" content="Hi! I'm Adina Cianciotto. This is my personal portfolio website. Stop by to hear a little more about me, my projects, my background, my work, as well as how to contact me."/>
+	<meta name="description"
+		content="Hi! I'm Adina Cianciotto. This is my personal portfolio website. Stop by to hear a little more about me, my projects, my background, my work, as well as how to contact me." />
 	<meta name="keywords"
 		content="Adina Cianciotto, A Cianciotto, Adina Lian Cianciotto, Adina Cianciotto Northwestern, Adina Cianciotto Developer">
 	<meta name="author" content="Adina Cianciotto" />
@@ -440,8 +441,8 @@
 						<div class="contactMe"></div>
 						<br>
 						<br>
-						<form class="contact2-form validate-form" data-aos="fade-up" action="index.php" method="post"
-							novalidate="novalidate">
+						<form class="contact2-form validate-form" data-aos="fade-up"
+							action="https://formspree.io/mzbdbykq" method="POST" novalidate="novalidate">
 							<p class="contact2-form-title">
 								Contact
 							</p>
