--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 							</div>
 
 							<div class="wrap-input2 validate-input"
-								data-validate="Please Enter a Valid Email: keylime@gmail.com">
+								data-validate="Please Enter a Valid Email: ex: keylime@gmail.com">
 								<input class="input2" type="text" name="email">
 								<span class="focus-input2" data-placeholder="EMAIL"></span>
 							</div>
