--- a/index.html
+++ b/index.html
@@ -447,25 +447,25 @@
 								Contact
 							</p>
 							<div class="wrap-input2 validate-input" data-validate="Please Enter Your Name">
-								<input class="input2" type="text" name="name">
+								<input class="input2" type="text" name="Name">
 								<span class="focus-input2" data-placeholder="NAME"></span>
 							</div>
 
 							<div class="wrap-input2 validate-input"
 								data-validate="Please Enter a Valid Email: ex: keylime@gmail.com">
-								<input class="input2" type="text" name="email">
+								<input class="input2" type="text" name="Email">
 								<span class="focus-input2" data-placeholder="EMAIL"></span>
 							</div>
 
 							<div class="wrap-input2 validate-input" data-validate="Please Enter a Message">
-								<textarea class="input2" name="message"></textarea>
+								<textarea class="input2" name="Message"></textarea>
 								<span class="focus-input2" data-placeholder="MESSAGE"></span>
 							</div>
 
 							<div class="container-contact2-form-btn">
 								<div class="wrap-contact2-form-btn">
 									<div class="contact2-form-bgbtn"></div>
-									<button class="contact2-form-btn" name="submit" type="submit" value="submit">
+									<button class="contact2-form-btn" name="Submit" type="submit" value="submit">
 										SUBMIT
 									</button>
 								</div>
