--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="theme-color" content="#000000" />
 	<meta name="description"
-		content="Hi! I'm Adina Cianciotto. This is my personal portfolio website. Stop by to hear a little more about me, my projects, my background, my work, as well as how to contact me." />
+		content="Hi! I'm Adina Cianciotto. This is my personal portfolio website. Stop by to read a little more about me, my projects, my background, my work, as well as how to contact me." />
 	<meta name="keywords"
 		content="Adina Cianciotto, A Cianciotto, Adina Lian Cianciotto, Adina Cianciotto Northwestern, Adina Cianciotto Developer">
 	<meta name="author" content="Adina Cianciotto" />
@@ -20,18 +20,6 @@
 	<link rel="stylesheet" href="vendors/nice-select/css/nice-select.css">
 	<link rel="stylesheet" href="vendors/popup/magnific-popup.css">
 	<link rel="stylesheet" href="vendors/flaticon/flaticon.css">
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-	<!-- Main CSS -->
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/style2.css">
-	<link rel="stylesheet" href="css/hover.css">
-	<link rel="stylesheet" href="css/responsive.css">
-	<link rel="stylesheet" href="css/form.css">
-	<!-- Jquery Modal -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
-	<!-- AOS -->
-	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<!--Custom Fonts-->
 	<link href="https://fonts.googleapis.com/css?family=Livvic&display=swap" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:400,700' rel='stylesheet'>
@@ -41,9 +29,21 @@
 	<link href="https://fonts.googleapis.com/css?family=Vibur&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+	<!-- Jquery Modal -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+	<!-- AOS -->
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<!-- Font Awesome -->
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
 		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	<!-- Animate.css -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+	<!-- Main CSS -->
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style2.css">
+	<link rel="stylesheet" href="css/hover.css">
+	<link rel="stylesheet" href="css/responsive.css">
+	<link rel="stylesheet" href="css/form.css">
 </head>
 
 <body>
