--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8" />
-	<link rel='icon' href='./img/favicon.ico' type='image/x-icon' />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="theme-color" content="#000000" />
+	<meta charset="utf-8">
+	<link rel='icon' href='./img/favicon.ico' type='image/x-icon'>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="theme-color" content="#000000">
 	<meta name="description"
-		content="Hi! I'm Adina Cianciotto. This is my personal portfolio website. Stop by to read a little more about me, my projects, my background, my work, as well as how to contact me." />
+		content="Hi! I'm Adina Cianciotto. This is my personal portfolio website. Stop by to read a little more about me, my projects, my background, my work, as well as how to contact me.">
 	<meta name="keywords"
 		content="Adina Cianciotto, A Cianciotto, Adina Lian Cianciotto, Adina Cianciotto Northwestern, Adina Cianciotto Developer">
-	<meta name="author" content="Adina Cianciotto" />
+	<meta name="author" content="Adina Cianciotto">
 	<title>Welcome To My Personal Portfolio</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
