--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 					<img src="img/icons/mysql.png" alt="MySQL Icon" class="small-icon">
 					<img src="img/icons/sass3.png" alt="Sass Icon" class="small-icon">
 					<img src="img/icons/express.png" alt="Express Icon" class="small-icon">
+					<img src="img/icons/wordpress.png" alt="WordPress Icon" class="small-icon">
 					<img src="img/icons/mongodb.png" alt="Mongodb Icon" class="small-icon">
 					<img src="img/icons/python.png" alt="Python Icon" class="small-icon">
 					<img src="img/icons/firebase.png" alt="Firebase Icon" class="small-icon">
