--- a/index.html
+++ b/index.html
@@ -527,11 +527,9 @@
 	<script src="js/theme.js"></script>
 	<script src="js/form.js"></script>
 	<!-- AOS -->
-	<script src="bower_components/aos/dist/aos.js"></script>
+	<!-- <script src="bower_components/aos/dist/aos.js"></script> -->
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<!-- Type It -->
-	<!-- <script src="https://cdn.jsdelivr.net/npm/typeit@VERSION_NUMBER/dist/typeit.min.js"></script>
-	<script src="typeit.min.js"></script> -->
 	<script src="js/type.js"></script>
 	<script>
 		AOS.init({
