--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 						<br>
 						<p data-aos="zoom-in-down" id="aboutText">Hi! My name is Adina
-							Cianciotto. I am a Northwestern graduate, Chicago-native, cat-mom, and Full-Stack Web
+							Cianciotto. I am a Northwestern graduate, Chicago-native, cat-mom, and Web
 							Developer who fell in love with the art and science of coding.
 							To me, web development is a passion and joy. It's
 							a platform to express creatively, never stop learning, and work together to bring bright
@@ -142,7 +142,8 @@
 							not
 							studying the latest tech or testing code, you can find me with my cats, reading a good
 							book,
-							playing tennis, or listening to some of my favorite podcasts.
+							playing tennis, or listening to some of my favorite podcasts. Currently, I am working at
+							americaneagle.com as a Front-End Developer.
 							Welcome to my
 							site!
 						</p>
