--- a/index.html
+++ b/index.html
@@ -141,11 +141,9 @@
 							I'm
 							not
 							studying the latest tech or testing code, you can find me with my cats, reading a good
-							book,
-							playing tennis, or listening to some of my favorite podcasts. Currently, I am working at
-							americaneagle.com as a Front-End Developer.
-							Welcome to my
-							site!
+							book, playing tennis, or listening to some of my favorite podcasts. Currently, I am working
+							at americaneagle.com as a Front-End Developer.
+							Welcome to my site!
 						</p>
 					</div>
 				</div>
