--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
 									<p class="hrLine" data-aos="fade-down" id="name"><span>Adina</span></p>
 									<div class="more_btn">
 										<button type="button" class="main_btn"><a
-												href="./files/Adina_Cianciotto_Resume_.pdf" target="_blank"
-												id="resume">RESUME</a></button>
+												>RESUME</a></button>
 									</div>
 									<ul class="list personal_social">
 										<li><a href="https://github.com/adi868" target="_blank"><i
